stylesheets/style.css
body{
    font-family: 'Roboto Condensed', sans-serif;
}

a{
  text-decoration: none;
  font-size: inherit;
  color: inherit;
  font-weight: inherit;
 
}

a:hover{
    text-decoration: none;
    color: #f72210;
   
  }

.clear{
    clear: both;
}
.container{
    max-width: 99% !important;
}
/* header */
header{
    margin-bottom: 25px;
}
.header-top{
    height: 96px;
    background-color: #f72210;
    padding: 20px 10px 15px;
}
.header-nav{
    border-bottom: 1px solid #f4f5f6;
}
header img
{
    width: 100%;
}
.subscribe
{
    font-weight: 700;
    background-color: #fff;
    color: #f72210;
    border-radius: 0;
    margin-left: 10px;
}

header p.date 
{
    color: #fff;
}

.text-left{
    padding-top: 3%;
}
.text-right{
    padding-top: 2%;
}
.text-left p
{
    margin-bottom: 0;
}
.text-right a
{
    color: #fff;
    font-weight: 700;
    
}

/* navbar */

ul.navbar-nav li{
    border-right: 1px solid #73707057;
    padding-right: 25px;
    padding-left: 28px;
    
}
ul.navbar-nav li:last-child{
    border-right: none;
    color: #333 !important;
}
ul.navbar-nav li a{
    font-weight: 700;
    color: #000 !important;
}
ul.navbar-nav li a:hover{
    color: #f72210 !important;
}

/* HEADLINE */
.featured-image{
   position: relative;
   min-height: 33px;
    margin-bottom: 10px;
}
.featured-image img{
    width: 100%;
    height: 100%;
}
.featured-image a{
    color: #f72210;
    padding: 5px 21px 6px;
    background-color: rgba(255,255,255,.9);
    position: absolute;
    bottom: 0;
    left: 0;
    z-index: 1;
    font-weight: 700;
}
.row h2
{
    color: rgba(3,3,3,.4);
    font-weight: 700;
    line-height: 16px;
    font-size: 16px;
    padding-bottom: 8px;
}

.featured-link1{
    font-size: 20px;
    font-weight: 700;
    line-height: 16px;
    margin-bottom: 10px;
     
}

a.featured-link1:hover{
    color: #000;
    
    text-decoration: underline;
    text-decoration-color: #f72210;
    
}

.featured-link2
 {
    
    border-top: 1px solid #3333;
    border-bottom: 1px solid #3333;
    padding: 10px 0;
    font-weight: 700;
    margin-bottom: 20px;
 }

 .featured-link1 + p 
 {
     margin-top: 16px;
 }


 .thumb-nail img{
 width: 100%;
 }

 .col-md-8{
     font-weight: 700;
 }

 .col-md-8 p a{
    color: #333333a8;
 }

 .col-md-8 p a:hover{
    color: #f72210;
 }


 .opinion article.row{
    border-top: 1px solid #ddd;
    
    padding: 10px 0;
 }

.no-border-top
{
    border-top: none !important;
}


 .col-md-8 p{
    margin-bottom: 0 !important;
 }

 .center-links a:hover{
    color: #000; 
    text-decoration: underline;
    text-decoration-color: #f72210;
 }

 .center-links p{
    color: rgba(3,3,3,.4);
 }


 /* 
 Latest News Style
 */

 .latest-news {
     margin-top: 30px;
   
 }

 .latest-news row 
 {
    border-top: 1px solid #ddd;
    padding-top: 10px;
    padding-bottom: 10px;
 }

